test/error/typeerror.ss
1 + <2>

# -> type error
